# Simple-Log

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  dir_44d47562eda1af6aa61cdce1dda887c1.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_581f67ddba1cbb2d5fe8434f2a70675e.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d6e834d2563b3cc15a9f30972ce6aac4.html  examples.html  examples.js  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_g.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_type.html  functions_u.html  functions_vars.html  (+21 more)
.github/: FUNDING.yml
.github/workflows/: build-and-test.yml  build_and_test-Clang-10.yml  build_and_test-Clang-Cl.yml  build_and_test-GCC-10.yml  build_and_test-MSVC.yml  generate_docs.yml
d0/d08/: _simple-_log_8hpp.html  _simple-_log_8hpp_source.html
d0/d1e/: classsl_1_1log_1_1pred_1_1_less.html  classsl_1_1log_1_1pred_1_1_less.js
d0/d40/: classsl_1_1log_1_1_scoped_sink_disabling.html  classsl_1_1log_1_1_scoped_sink_disabling.js
d0/d82/: structsl_1_1log_1_1_file_sink_1_1_rotation_rule.html  structsl_1_1log_1_1_file_sink_1_1_rotation_rule.js
d0/dc6/: classsl_1_1log_1_1_o_stream_sink-members.html
d0/dde/: structsl_1_1log_1_1_file_sink_1_1_rotation_rule-members.html
d0/de9/: group__record.html  group__record.js
d1/d2f/: classsl_1_1log_1_1_o_stream_sink.html  classsl_1_1log_1_1_o_stream_sink.js
d1/d79/: _ready_to_go_8hpp.html  _ready_to_go_8hpp.js  _ready_to_go_8hpp_source.html
d1/d81/: classsl_1_1log_1_1_string_pattern.html  classsl_1_1log_1_1_string_pattern.js
d1/de1/: classsl_1_1log_1_1_record_queue.html  classsl_1_1log_1_1_record_queue.js
d1/df2/: namespacerang.html  namespacerang.js
d2/d21/: namespacesl_1_1log_1_1preset.html
d2/d30/: _example_docs_8hpp.html  _example_docs_8hpp_source.html
d2/d41/: classsl_1_1log_1_1pred_1_1_less-members.html
d2/d5f/: _i_sink_8hpp.html  _i_sink_8hpp_source.html
d2/dce/: classsl_1_1log_1_1_equals.html  classsl_1_1log_1_1_equals.js  group___record_builder.html  group___record_builder.js
d2/dd1/: structsl_1_1log_1_1_set_user_data.html  structsl_1_1log_1_1_set_user_data.js
d2/df0/: classsl_1_1log_1_1_console_sink.html  classsl_1_1log_1_1_console_sink.js
d3/d0a/: classsl_1_1log_1_1_byte_count_flush_policy-members.html
d3/d16/: classsl_1_1log_1_1pred_1_1_not_equals-members.html
d3/d23/: classsl_1_1log_1_1pred_1_1_between_equals-members.html
d3/d31/: classsl_1_1log_1_1pred_1_1_not_equals.html  classsl_1_1log_1_1pred_1_1_not_equals.js
d3/d42/: classsl_1_1log_1_1_flush_policy_none_of-members.html
d3/d63/: classsl_1_1log_1_1_filter_any_of.html  classsl_1_1log_1_1_filter_any_of.js
d3/d8d/: classsl_1_1log_1_1pred_1_1_greater_equal-members.html
d3/d9b/: classsl_1_1log_1_1_between.html  classsl_1_1log_1_1_between.js
d3/de3/: _logger_8hpp.html  _logger_8hpp.js  _logger_8hpp_source.html
d4/d32/: namespacerang_1_1rang__implementation.html
d4/d36/: classsl_1_1log_1_1_projection_filter.html  classsl_1_1log_1_1_projection_filter.js
d4/d37/: classsl_1_1log_1_1_scoped_sink_disabling-members.html
d4/d38/: group__filter.html  group__filter.js
d4/d46/: _predicates_8hpp.html  _predicates_8hpp_source.html
d4/d47/: _string_pattern_8hpp.html  _string_pattern_8hpp_source.html
d4/d5b/: _o_stream_sink_8hpp.html  _o_stream_sink_8hpp_source.html
d4/d5f/: _custom_record_type_2main_8cpp-example.html
d4/d80/: _colorized_console_logging_2main_8cpp-example.html  classsl_1_1log_1_1pred_1_1_between-members.html
d4/d87/: classsl_1_1log_1_1_byte_count_flush_policy.html  (+1 more)
docs/: ConsoleSinkDocs.hpp  ExampleDocs.hpp  RecordDocs.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+83 more)
src/tests/: BaseRecordTests.cpp  BasicSinkTests.cpp  CMakeLists.txt  ConsoleSinkTests.cpp  CoreTests.cpp  FileSinkTests.cpp  FilterTests.cpp  FlushPolicyTests.cpp  LogTest.cpp  LoggerTests.cpp  OStreamSinkTests.cpp  PredicateTests.cpp  ProjectionTests.cpp  RecordQueueTests.cpp  StringPatternTest.cpp  TupleAlgorithmTests.cpp  main.cpp
test/: LogTest.cpp  StringPatternTest.cpp  main.cpp
tests/: CMakeLists.txt  CoreTests.cpp  FileSinkTests.cpp  FilterTests.cpp  FlushPolicyTests.cpp  LoggerTests.cpp  PredicateTests.cpp  RecordBuilderTests.cpp  RecordQueueTests.cpp  RecordTests.cpp  StringPatternTest.cpp  main.cpp
(+267 files in other folders)
